--- a/src/components/Dashboard/Tabs/style.css
+++ b/src/components/Dashboard/Tabs/style.css
@@ -8,7 +8,10 @@
   }
   
   .list-flex {
-    width: 100%;
+    width: 80%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
   @media only screen and (max-width: 600px) {
     .grid-flex {
