--- a/src/components/Dashboard/Grid/style.css
+++ b/src/components/Dashboard/Grid/style.css
@@ -1,6 +1,6 @@
 .grid-container {
-  width: 220px;
-  height: 210px;
+  width: 230px;
+  height: 230px;
   background-color: var(--darkgrey);
   border-radius: 0.7rem;
   padding: 1.5rem;
@@ -110,4 +110,40 @@
   .bold{
     color: rgb(218, 218, 218);
     font-weight: 600;
+  }
+/* 
+  .icon{
+    display: flex;
+    justify-content: flex-end;
+  } */
+  .watchlist-icon{
+    color: var(--green);
+    padding: 0.5rem;
+    display: block;
+    color: var(--green);
+    /* font-size: 2rem !important; */
+    margin-left: 30px;
+    margin-bottom: 5px;
+    border: 2px solid var(--green);
+    border-radius: 3rem;
+    font-weight: 600;
+    padding: 0.3rem;
+  }
+
+
+  .watchlist-icon:hover {
+    background-color: var(--green);
+    color: var(--white);
+    transition: all 0.3s;
+  }
+  
+  .watchlist-icon-red {
+    color: var(--red);
+    border: 2px solid var(--red);
+  }
+  
+  .watchlist-icon-red:hover {
+    background-color: var(--red) !important;
+    color: var(--white);
+    transition: all 0.3s;
   }
