--- a/src/components/Common/Button/style.css
+++ b/src/components/Common/Button/style.css
@@ -9,7 +9,7 @@
     transition: all 0.3s;
     width: fit-content;
     color: rgb(255, 255, 255);
-    z-index: 100;
+    position: relative;
     /* position: absolute; */
 }
 .btn-div:hover{
