--- a/src/components/LandingPage/Intro/style.css
+++ b/src/components/LandingPage/Intro/style.css
@@ -10,12 +10,14 @@
 .heading-2 {
   font-size: 5.2rem;
   margin: 0;
+  position: relative;
   
 }
 .heading-1 {
   color: var(--blue);
   font-weight: 800;
   margin-top: 70px;
+
 
 }
 .heading-1:hover {
@@ -60,6 +62,7 @@
 
 @media only screen and (max-width: 800px) {
   .landing-wrapper {
+    min-height: 150vh;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
